# indagxation

./: .gitignore  README.md  justfile  pyproject.toml  workspace.yaml
.dagster/.telemetry/: id.yaml
.dagster/history/: runs.db
.dagster/history/runs/: 04b5fde1-7295-4464-9aa8-eb5fc74f0658.db  21cedb3b-7265-445d-bc71-1c70d28b7d2a.db  31f12147-7b55-40fb-9971-354bd3b9c77f.db  3b29c9d7-5f23-4b26-830f-e3f72bcc5deb.db  72201c17-85cf-4af9-9ebd-fc5327b1b40e.db  740daafa-33a3-42ba-9fca-5e8cfd649869.db  78783383-ca8f-4b26-9d6d-a2acb60dbead.db  7be11915-6be5-4712-be5a-491ee39c52b4.db  8323f084-bc9c-4b95-89cb-426b81c191b3.db  9506eab7-ed3b-4229-8401-28fed5a86061.db  a269ed95-89be-4d3c-8260-a80efb88aae5.db  abd97724-f332-4310-b441-b8d61297cfb8.db  c11281bf-7df8-497c-90fa-f8826f73ff00.db  de6c2bd7-a8fd-43ba-8576-efa334d7c731.db  index.db
.dagster/schedules/: schedules.db
.dagster/storage/: load_docs
.dagster/storage/04b5fde1-7295-4464-9aa8-eb5fc74f0658/compute_logs/: kwrccupw.err  umbohffs.err
.dagster/storage/21cedb3b-7265-445d-bc71-1c70d28b7d2a/compute_logs/: csoaspxy.err  tglrgehd.err
.dagster/storage/31f12147-7b55-40fb-9971-354bd3b9c77f/compute_logs/: pqjcnhpi.err
.dagster/storage/3b29c9d7-5f23-4b26-830f-e3f72bcc5deb/compute_logs/: aytedleu.err
.dagster/storage/8323f084-bc9c-4b95-89cb-426b81c191b3/compute_logs/: wzoohiuf.err  zdcrdjwt.err
indagxation/: __init__.py  alpha.py  assets.py  config.py  models.py  resources.py
indagxation/resources/: __init__.py  chroma.py  github.py
tests/: test_alpha.py  test_assets.py
(+5 files in other folders)
