[tool.poetry]
name = "indagxation"
version = "0.0.0"
description = ""
authors = ["Elias Tavarez <etav@umich.edu>"]
readme = "README.md"
packages = [{ include = "indagxation", from = "." }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
dagster = "^1.7.15"
langchain-community = "^0.2.10"
langchain = "^0.2.11"
bs4 = "^0.0.2"
chromadb = "^0.5.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
loguru = "^0.7.2"
dagster-webserver = "^1.7.15"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.1"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.dagster]
module_name = "indagxation"

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
